2014-05-11  Leo Liu  <sdl.web@gmail.com>

	* net/rcirc.el (rcirc-sentinel): Fix last change.

2014-05-08  Sam Steingold  <sds@gnu.org>

	* net/rcirc.el (rcirc-reconnect-delay): New user option.
	(rcirc-sentinel): Auto-reconnect to the server if
	`rcirc-reconnect-delay' is non-0 (but not more often than its
	value in case the host is off-line).

2014-05-09  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/grep.el (lgrep): Fix a typo in last commit.

2014-05-09  Glenn Morris  <rgm@gnu.org>

	* files.el (file-expand-wildcards):
	* man.el (Man-support-local-filenames):
	* printing.el (pr-i-directory, pr-interface-directory):
	* progmodes/grep.el (lgrep, rgrep):
	* textmodes/ispell.el (ispell-call-process)
	(ispell-call-process-region, ispell-start-process)
	(ispell-init-process): Use file-accessible-directory-p.

2014-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xt-mouse.el: Drop spurious/oddly shaped events (bug#17378).
	(xterm-mouse--read-event-sequence-1000): Return nil if something
	looks fishy.
	(xterm-mouse-event): Propagate it.
	(xterm-mouse-translate-1): Handle it.

2014-05-08  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-insert-item--apply-args): When all
	four slots of the parameter list are filled, make sure to pass it
	to the argument list of todo-insert-item--basic.

2014-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-compute-transaction): Topological sort.
	Add optional `seen' argument to detect and break infinite loops.

2014-05-08  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/find-gc.el (find-gc-unsafe, find-unsafe-funcs)
	(trace-unsafe, trace-use-tree): Make parentheses style be
	according to Emacs style.

2014-05-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-remote-process-environment):
	Remove HISTFILE and HISTSIZE; it's too late to set them here.
	Add :version entry.
	(tramp-open-shell): Do not let-bind `tramp-end-of-output'.